@@ -2,38 +2,59 @@ package com.kasigrill.ordering_system.whatsapp;
 
 import org.springframework.stereotype.Component;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 @Component
 public class WhatsappPayloadParser {
 
-    public boolean isStatusUpdatePayload(Map<String, Object> payload) {
+    public String isStatusUpdatePayload(Map<String, Object> payload) {
         // Dig into the map structure to see if "statuses" is present instead of "messages"
         // Meta uses {"entry": [{"changes": [{"value": {"statuses": [...]}}]}]} for receipts
         try {
             List<?> entry = (List<?>) payload.get("entry");
-            Map<?, ?> entryMap = (Map<?, ?>) entry.get(0);
+            Map<?, ?> entryMap = (Map<?, ?>) entry.getFirst();
             List<?> changes = (List<?>) entryMap.get("changes");
-            Map<?, ?> changeMap = (Map<?, ?>) changes.get(0);
+            Map<?, ?> changeMap = (Map<?, ?>) changes.getFirst();
             Map<?, ?> value = (Map<?, ?>) changeMap.get("value");
 
             if (value.containsKey("statuses") && value.get("statuses") != null) {
                 System.out.println("====== METRIC STATUS UPDATE DETECTED ======");
                 System.out.println(value.get("statuses"));
                 System.out.println("===========================================");
-                return true;
+
+                String textId = extractCustomId(payload);
+
+                if (textId != null) {
+                    if (textId.equalsIgnoreCase("text_name") || textId.equalsIgnoreCase("text_number")) {
+                        return textId;
+                    }
+                }
+
+                return "";
             }
-            return false;// Returns true if it's just a read/delivery receipt
+            return null;// Returns true if it's just a read/delivery receipt
         } catch (Exception e) {
-            return false;
+            return null;
         }
     }
 
+    @SuppressWarnings("unchecked")
+    public String extractCustomId(Map<String, Object> payload) {
+        List<Map<String, Object>> entries = (List<Map<String, Object>>) payload.get("entry");
+        Map<String, Object> firstEntry = entries.getFirst();
+
+        List<Map<String, Object>> changes = (List<Map<String, Object>>) firstEntry.get("changes");
+        Map<String, Object> value = (Map<String, Object>) changes.getFirst().get("value");
+
+        List<Map<String, Object>> statuses = (List<Map<String, Object>>) value.get("statuses");
+        if (statuses == null || statuses.isEmpty()) return null;
+
+        return (String) statuses.getFirst().get("biz_opaque_callback_data");
+    }
 
     @SuppressWarnings("unchecked")
-    public Map<String,Object> getMessage(Map<String, Object> payload){
+    public Map<String, Object> getMessage(Map<String, Object> payload) {
 
         List<Map<String, Object>> entries = (List<Map<String, Object>>) payload.get("entry");
         Map<String, Object> changes = (Map<String, Object>) ((List<Map<String, Object>>) entries.getFirst().get("changes")).getFirst();
@@ -46,53 +67,29 @@ public class WhatsappPayloadParser {
         }
 
         // 2. Get the first message object
-        Map<String, Object> message = messages.getFirst();
-        return message;
+        return messages.getFirst();
     }
-
-
     @SuppressWarnings("unchecked")
-    private Map<String, Object> extractLocation(Map<String, Object> payload) {
+    public String getNumberFromStatus(Map<String, Object> payload) {
         try {
-            List<Map<String, Object>> entry = (List<Map<String, Object>>) payload.get("entry");
-            if (entry != null && !entry.isEmpty()) {
-                List<Map<String, Object>> changes = (List<Map<String, Object>>) entry.get(0).get("changes");
-                if (changes != null && !changes.isEmpty()) {
-                    Map<String, Object> value = (Map<String, Object>) changes.get(0).get("value");
-                    if (value != null && value.containsKey("messages")) {
-                        List<Map<String, Object>> messages = (List<Map<String, Object>>) value.get("messages");
-                        if (messages != null && !messages.isEmpty()) {
-                            Map<String, Object> message = messages.get(0);
+            List<Map<String, Object>> entries = (List<Map<String, Object>>) payload.get("entry");
+            Map<String, Object> changes = (Map<String, Object>) ((List<Map<String, Object>>) entries.getFirst().get("changes")).getFirst();
+            Map<String, Object> value = (Map<String, Object>) changes.get("value");
 
-                            // 1. Check if the incoming message type is a location
-                            if ("location".equals(message.get("type"))) {
-                                // 2. Extract the nested location map object
-                                Map<String, Object> locationBlock = (Map<String, Object>) message.get("location");
+            // Target the "statuses" array instead of "messages"
+            List<Map<String, Object>> statuses = (List<Map<String, Object>>) value.get("statuses");
 
-                                if (locationBlock != null) {
-                                    // Meta sends coordinates as Numbers (Double)
-                                    Double latitude = (Double) locationBlock.get("latitude");
-                                    Double longitude = (Double) locationBlock.get("longitude");
-                                    String name = (String) locationBlock.get("name"); // Optional: e.g. "Pretoria Central"
-                                    String address = (String) locationBlock.get("address"); // Optional
+            if (statuses != null && !statuses.isEmpty()) {
+                Map<String, Object> status = statuses.getFirst();
 
-                                    // 3. Wrap them up nicely to return
-                                    Map<String, Object> coordinates = new HashMap<>();
-                                    coordinates.put("latitude", latitude);
-                                    coordinates.put("longitude", longitude);
-                                    coordinates.put("name", name);
-                                    coordinates.put("address", address);
-
-                                    return coordinates;
-                                }
-                            }
-                        }
-                    }
-                }
+                // Meta stores the number here for sent/delivered/read receipts
+                return (String) status.get("recipient_id");
             }
         } catch (Exception e) {
-            System.err.println("Error extracting location: " + e.getMessage());
+            // Safely exit if this payload doesn't contain a status
         }
+
         return null;
     }
+
 }
